feat: remove lyrices
